@startuml
'https://plantuml.com/class-diagram

class Election{
    - {static} Election instance
    - int trump, biden
    - Election()
    + {static} Election getInstance()
    + void vote(Candidate c)

}
class User{
    - String id
    + void vote(Candidate c)
}
enum Candidate{
    TRUMP, BIDEN
}
User ..> Election
User ..> Candidate
Election ..> Candidate

@enduml